# skadi

./: CMakeLists.txt  test.json  vs.props.in
application/: skadi.cpp
include/: graph.h  graph_io.h  ui_connection.h  ui_library.h  ui_node.h  ui_scene.h  ui_tree_filter.h  ui_view.h
source/: graph_io.cpp  ui_connection.cpp  ui_library.cpp  ui_node.cpp  ui_scene.cpp  ui_tree_filter.cpp  ui_view.cpp
